<resources>
    <string name="app_name">Gametest</string>
    <string name="et_nombre">¿Cómo te llamas?</string>
    <string name="boton">Jugar</string>

    <string name="et_vida">Corazones</string>
    <string name="jugador_nombre">Jugador:</string>
    <string name="total_score">Score: 0</string>
    <string name="boton_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>

    <string name="et_preguntacondicional">Pregunta 0</string>
    <string name="et_pregunta">Pregunta 1</string>
    <string name="et_pregunta2">Pregunta 2</string>
    <string name="et_pregunta3">Pregunta 3</string>
    <string name="et_pregunta4">Pregunta 4</string>
    <string name="title_activity_suportheapp">suportheapp</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample"> Gana un intento más viendo un anuncio </string>
    <string name="start_level"> +0 vida </string>
    <string name="next_level">Continuar</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-2207643711872698/4120751790</string>
    <string name="title_activity_bonnuslive">Bonnuslive</string>
    <string name="title_activity_bonustest">Bonnuslive</string>
    <string name="title_activity_main_activity2_bonnus">MainActivity2Bonnus</string>
    <string name="confirmar">Confirmar</string>
    <string name="yes">YES</string>
    <string name="button">Button</string>
    <string name="title_activity_bonus_live_borrar">BonusLiveBorrar</string>
    <string name="continuar">Continuar</string>


</resources>