<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondobonus"
    tools:context=".Bonnuslive">

    <!-- view for AdMob Interstitial Ad -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="115dp"
        app:srcCompat="@drawable/gameover" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="686dp"
        android:text="@string/start_level"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="27dp"
        android:enabled="true"
        android:onClick="Condicionparahabilitar"
        android:text="@string/next_level"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonVida"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="23dp"
        android:background="@android:drawable/ic_media_play"
        android:enabled="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="onBackPressed"
        android:text="Si "
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonGameover"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:onClick="BTMGAMEOVER"
        android:text="@string/continuar"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-200dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="150dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:text="Guarda tu puntación"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30dp" />

</RelativeLayout>