<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainAcitivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_above="@+id/bestScore"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/action_settings"
        android:onClick="pulsado"
        app:srcCompat="@drawable/offsond" />

    <ImageView
        android:id="@+id/imageView_Personaje"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bestScore"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="220dp"
        app:srcCompat="@drawable/high1" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_below="@+id/imageView_Personaje"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="-260dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:fontFamily="@font/brus"
        android:gravity="center"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:minHeight="48dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="#00B4CC"
        android:textColorHint="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="81dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="42dp"
        android:onClick="Jugar"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>